[metadata]
name = opendp-smartnoise-core
version = 0.2.2
author = Consequences of Data
author-email = smartnoise@opendp.org
home-page = https://github.com/opendifferentialprivacy/smartnoise-core-python
description = a pluggable library of differentially private algorithms and mechanisms for releasing privacy preserving queries and statistics
long-description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = differential-privacy
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering

[options]
packages = find_namespace:
zip_safe = false              # unzip package upon install
python_requires = >= 3.6
test_suite = tests
install_requires = 
	protobuf
	numpy

[options.packages.find]
include = opendp.*

[sdist]
formats = zip, gztar

