[metadata]
name = opendp-smartnoise-core
version = 0.2.6
author = Consequences of Data
author_email = info@opendp.org
home_page = https://github.com/opendp/smartnoise-core-python
description = Deprecated. Please use the OpenDP library: https://github.com/opendp/opendp
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = differential-privacy
classifiers = 
	Development Status :: 7 - Inactive
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering

[options]
packages = find_namespace:
python_requires = >= 3.6
test_suite = tests

[options.packages.find]
include = opendp.*

